src/integration/snapshots/rustclean__integration__screens__uninstall-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (on disk)  │  17 files  │  sort: size
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
    Size        Share               Files      Modified         Name
▶       3.6 GiB █████         41.2%          4 2026-09-29 12:00 Downloads/
        3.2 GiB ████▍         36.7%          2 2026-09-21 12:00 Movies/
        1.1 GiB █▌            12.8%          5 2026-09-28 12:00 Projects/
      665.0 MiB ▉              7.5%          2 2026-09-30 12:00 Library/
      150.0 MiB ▎              1.7%          1 2026-09-21 12:00 Applications/
  ┌ Uninstall: Sketchpad ────────────────────────────────────────────────────────────────────────┐
  │                                                                                              │
  │ [✓] /Users/demo/Applications/Sketchpad.app                                         150.0 MiB │
  │ [✓] /Users/demo/Library/Application Support/com.example.sketchpad                   55.0 MiB │
  │ [ ] /Users/demo/Library/Caches/com.example.browser                                 610.0 MiB │
  │                                                                                              │
  │ Selected: 2 of 3 items · 205.0 MiB                                                           │
  │ Data was matched by name and bundle id (a guess): check the list.                            │
  │ ⚠ The app is running: quit it first.                                                         │
  │ Will be moved to the trash.                                                                  │
  │                                                                                              │
  │  y  uninstall      Space  check      n  cancel                                               │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘






────────────────────────────────────────────────────────────────────────────────────────────────────
37 items scanned, 1.2 s   ⚠ 2 items inaccessible
 ↑↓  move   Space  check   t  all   y  uninstall   n / Esc  cancel
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+16 -/DarkGray BOLD | 16+12 Cyan/DarkGray BOLD | 28+8 -/DarkGray BOLD | 36+10 Gray/DarkGray BOLD | 46+1 -/DarkGray BOLD | 47+16 Green/DarkGray BOLD | 63+1 -/DarkGray BOLD | 64+10 LightBlue/DarkGray BOLD | 74+26 -/DarkGray BOLD
 4: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+7 LightBlue/- BOLD
 5: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+9 LightBlue/- BOLD
 6: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+8 LightBlue/- BOLD
 7: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+13 LightBlue/- BOLD
 8: 2+96 Red/-
 9: 2+1 Red/- | 97+1 Red/-
10: 2+1 Red/- | 97+1 Red/-
11: 2+1 Red/- | 4+92 -/- REVERSED | 97+1 Red/-
12: 2+1 Red/- | 4+92 Gray/- | 97+1 Red/-
13: 2+1 Red/- | 97+1 Red/-
14: 2+1 Red/- | 4+34 -/- BOLD | 97+1 Red/-
15: 2+1 Red/- | 4+65 Gray/- | 97+1 Red/-
16: 2+1 Red/- | 4+36 Red/- BOLD | 97+1 Red/-
17: 2+1 Red/- | 4+27 Gray/- | 97+1 Red/-
18: 2+1 Red/- | 97+1 Red/-
19: 2+1 Red/- | 4+3 Black/Red BOLD | 22+7 Black/Gray | 40+3 Black/Gray | 97+1 Red/-
20: 2+96 Red/-
28: 0+23 Gray/- | 23+25 Yellow/-
29: 0+4 Black/Gray | 11+7 Black/Gray | 26+3 Black/Gray | 35+3 Black/Gray | 50+9 Black/Gray
